--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -10,11 +10,28 @@
 
     <link href="../styles/main.css" rel="stylesheet">
     <link href="../styles/dashboard.css" rel="stylesheet">
+    <script src="../scripts/menu.js" defer></script>
+
     <title>DASHBOARD</title>
 </head>
 <body>
-    <nav>
-        N
+    <nav class="flex-row-center-center">
+        <ul class="desktop-icons">
+            <li>
+                <i class="fa-solid fa-house"></i>
+                <span>HOME</span>
+            </li>
+            <li>
+                <i class="fa-solid fa-pizza-slice"></i>
+                <span>OFERTA</span>
+            </li>
+        </ul>
+        <ul class="mobile-icons">
+            <li id="hamburger-menu">
+                <i class="fa-solid fa-bars"></i>
+                <span>MENU</span>
+            </li>
+        </ul>
     </nav>
     <main>
         <section>
@@ -36,7 +53,16 @@
             </div>
         </section>
         <aside>
-            B
+            <h1>Panel Zamówień</h1>
+            <ul>
+                <li><a href="#">📋 Przegląd zamówień</a></li>
+                <li><a href="#">🍕 Nowe zamówienie</a></li>
+                <li><a href="#">🚀 W trakcie realizacji</a></li>
+                <li><a href="#">✅ Zrealizowane</a></li>
+                <li><a href="#">👤 Klienci</a></li>
+                <li><a href="#">📊 Statystyki</a></li>
+                <li><a href="#">⚙️ Ustawienia</a></li>
+            </ul>
         </aside>
     </main>
 </body>
